kubernetes/message-service.yml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: mrflick72/message-service:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
---

kind: Service
apiVersion: v1
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 8080
