kubernetes/mongo.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: spring-cloud-kubernetes-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongo-pv-claim

---

kind: Service
apiVersion: v1
metadata:
  name: mongo-svc
  namespace: spring-cloud-kubernetes-demo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
