kubernetes/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: spring-cloud-kubernetes-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379

---

kind: Service
apiVersion: v1
metadata:
  name: redis-svc
  namespace: spring-cloud-kubernetes-demo
spec:
  selector:
    app: redis
  ports:
    - port: 6379
